src/test/compile-fail/vector-no-ann-2.rs
// error-pattern:3:24:3:25
fn main() -> () {
  let @vec[uint] foo = @[];
}
// this checks that span_err gets used
